Fix cards alignment and formatting

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,12 +101,12 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 5px 12px 9px 12px;
+  padding: 5px 12px 7px 12px;
 }
 
 .card__image-group {
   position: relative;
-  border-top: 2px solid var(--accent-color);
+  border-top: 2px solid var(--accent-color, #000);
   border-bottom: 2px solid var(--accent-color);
 }
 
@@ -115,7 +115,6 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
-
 }
 
 .card__image-watermark {
@@ -135,7 +134,8 @@
 }
 
 .card__text {
-  padding: 27px 25px 25px 25px;
+  border-top: 2px solid var(--accent-color, #000);
+  padding: 25px 27px 25px 27px;
   display: flex;
   flex-direction: column;
   gap: 27px;
@@ -147,7 +147,8 @@
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 116.667%;
+  letter-spacing: 0.55px;
+  /* line-height: 116.667%; */
 }
 
 .card__like-group {
